# dense_plasma_optical_properties_V1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/IF_parser/: IF_parser.cpp  IF_parser.hpp
src/globals/: globals.cpp  globals.hpp
src/main/: main.cpp  main.hpp
